@@ -1,3 +1,7 @@
+2022-07-18
+
+    * maps/random/jammys_despair.json:disable docks
+
 2022-07-11
 
     * release v0.26.2
